<?xml version="1.0" encoding="utf-8"?>
<!-- 
	系统添加任务界面
	2015-01-18	Daniel		v1.0		Create
	
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:gravity="center|right"
            android:textColor="#000000"
            android:text="@string/task_add_projectNameLabel"/>
        
        <Spinner
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            >
      	</Spinner>
    </LinearLayout>
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:gravity="center|right"
            android:textColor="#000000"
            android:text="@string/task_add_projectFinishValueLabel"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
         
         <EditText
             android:layout_width="55dp"
             android:layout_height="match_parent"
             android:singleLine="true"
             android:text="20" />
        
         <TextView 
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:textColor="#000000"
            android:text="@string/task_add_projectFinishDateLabel"/>
        
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:text="2015-05-01" >
			<requestFocus />
		</EditText>
        </LinearLayout>
    </LinearLayout>

	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:gravity="center|right"
            android:textColor="#000000"
            android:text="@string/task_add_projectDateLabel"/>
       	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">       
	         <EditText
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:singleLine="true"
	            android:text="2015-05-01" >
		    	<requestFocus />
			</EditText>
	    	<LinearLayout 
	    	    android:layout_width="match_parent"
	    	    android:layout_height="match_parent"
	    	    android:orientation="horizontal"
	    	    android:layout_weight="1">
	    	    
	    	     <TextView 
		            android:layout_height="match_parent"
		            android:layout_width="match_parent"
		            android:layout_weight="4"
		            android:gravity="center|right"
		            android:textColor="#000000"
		            android:text="@string/task_add_projectTimeWorkLabel"/>
		         <EditText
		             android:layout_width="40dp"
		             android:layout_height="match_parent"
		             android:singleLine="true"
		             android:text="8" >
		             <requestFocus />
		      	</EditText>
		        
		         <TextView 
		            android:layout_height="match_parent"
		            android:layout_width="match_parent"
		            android:layout_weight="4"
		            android:gravity="center|right"
		            android:textColor="#000000"
		            android:text="@string/task_add_projectTimeWorkOverTimeLabel"/>
		        
		        <EditText
		            android:layout_width="40dp"
		            android:layout_height="match_parent"
		            android:singleLine="true"
		            android:text="0">
		             <requestFocus />
		      	</EditText>
	    	    
	    	</LinearLayout>    
      	</LinearLayout>
  	</LinearLayout>

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:ems="10"
	    android:gravity="top"
	    android:inputType="textMultiLine"
	    android:text="1：" >
	    <requestFocus />
	</EditText>
	
</LinearLayout>
