<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f8f8f8"
    >
    
    <fragment 
        android:id="@+id/frament_calendar"
        android:name="org.chonger.rpm.ui.views.main.CalendarFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        />
     <fragment 
        android:id="@+id/frament_task"
        android:name="org.chonger.rpm.ui.views.main.TaskFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        />
      <fragment 
        android:id="@+id/frament_mail"
        android:name="org.chonger.rpm.ui.views.main.MailFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        />
       <fragment 
        android:id="@+id/frament_message"
        android:name="org.chonger.rpm.ui.views.main.MessageFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        />
      <fragment 
        android:id="@+id/frament_setting"
        android:name="org.chonger.rpm.ui.views.main.SettingFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        />
      
       <View 
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#0054a5"/>
      
      <RadioGroup 
          android:id="@+id/bottomGroup"
          android:layout_width="fill_parent"
          android:layout_height="@dimen/button_group_height"
          android:layout_weight="0.5"
          android:orientation="horizontal"
          >

          <RadioButton
              android:id="@+id/rdobtn_calendar"
              style="@style/tabBtn"
              android:checked="true"
              android:drawableTop="@drawable/icon_calendar_hover"
              android:text="@string/menu_calendar" 
              />

          <RadioButton 
              android:id="@+id/rdobtn_task"
              style="@style/tabBtn"
              android:drawableTop="@drawable/icon_task"
              android:text="@string/menu_task"
              />
          
          <RadioButton 
              android:id="@+id/rdobtn_mail"
              style="@style/tabBtn"
              android:drawableTop="@drawable/icon_mail"
              android:text="@string/menu_mail"
              />
          <RadioButton 
              android:id="@+id/rdobtn_message"
              style="@style/tabBtn"
              android:drawableTop="@drawable/icon_message"
              android:text="@string/menu_message"
              />
          <RadioButton 
              android:id="@+id/rdobtn_setting"
              style="@style/tabBtn"
              android:drawableTop="@drawable/icon_setting"
              android:text="@string/menu_setting"
              />
      </RadioGroup>
</LinearLayout>